# job-profiles-rag

./: .env.sample  .gitignore  README.md  azure.md  launch.json  pyproject.toml  requirements.txt
backend/: Dockerfile  Dockerfile.bak  main.py  requirements.txt
backend/auth/: __init__.py  api_key.py  middleware.py
backend/handlers/: azure_client.py  classify_profile.py  draw_graph.py  draw_pr_graph.py  draw_profiles_graph.py  generate_profile.py  profiles.py  provide_help.py  provide_self_help.py  readme.md  token_limiter.py
backend/routers/openai/: router.py
backend/routers/semantic/: layer.py
backend/utils/: logging_config.py
kubernetes/: README  postgres-config.yaml
kubernetes/api/: deployment.yaml  secrets.yaml  service.yaml
kubernetes/api/base/: app-cache-pvc.yaml  bc.yaml  deployment.yaml  kustomization.yaml  np.yaml  pvc.yaml  route.yaml  secrets.yaml  service.yaml
kubernetes/openwebui/: README
kubernetes/openwebui/base/: kustomization.yaml  ollama-service.yaml  ollama-statefulset.yaml  webui-deployment.yaml  webui-ingress.yaml  webui-pvc.yaml  webui-route.yaml  webui-service.yaml
kubernetes/openwebui/gpu/: ollama-statefulset-gpu.yaml
kubernetes/openwebui/overlays/local/: external-api.yaml  ingress.yaml  kustomization.yaml
neo4j/: docker-compose.yml
notebooks/: api_completion.ipynb  create_vectore_store.ipynb  graphrag.ipynb  graphrag2.ipynb  try_vector_store.ipynb  utils.py
